Add DeleteAuthor handler
